<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="home.home">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuidelineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/accountSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickAccountSettings"
        android:text="@string/accountSettings"
        app:layout_constraintBottom_toTopOf="@id/seeMyAppointments"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuidelineTitle" />

    <Button
        android:id="@+id/seeMyAppointments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSeeMyAppointments"
        android:text="@string/seeMyAppointments"
        app:layout_constraintBottom_toTopOf="@+id/makeAppointment"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/accountSettings" />

    <Button
        android:id="@+id/makeAppointment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickMakeAppointment"
        android:text="@string/makeAppointment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/seeMyAppointments" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuidelineTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
