<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="makeAppointment.makeAppointment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuidelineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticallGuidelineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        android:id="@+id/logoHome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuidelineTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticallGuidelineTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/item1"
        android:onClick="onClickGoHome"/>

    <TextView
        android:id="@+id/makeAppointmentTV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/makeAppointment"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuidelineTitle"
        app:layout_constraintEnd_toStartOf="@id/verticallGuidelineTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/findSalon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickFindSalon"
        android:text="@string/findsalon"
        app:layout_constraintBottom_toTopOf="@id/allSalons"
        app:layout_constraintEnd_toStartOf="@id/verticalGuidLineRight"
        app:layout_constraintStart_toStartOf="@id/verticalGuidLineLeft"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuidelineTitle" />

    <Button
        android:id="@+id/allSalons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickAllSalons"
        android:text="@string/allsalons"
        app:layout_constraintBottom_toTopOf="@id/findTreatment"
        app:layout_constraintEnd_toStartOf="@id/verticalGuidLineRight"
        app:layout_constraintStart_toStartOf="@id/verticalGuidLineLeft"
        app:layout_constraintTop_toBottomOf="@+id/findSalon" />

    <Button
        android:id="@+id/findTreatment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickFindTreatment"
        android:text="@string/findtreatment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/verticalGuidLineRight"
        app:layout_constraintStart_toStartOf="@id/verticalGuidLineLeft"
        app:layout_constraintTop_toBottomOf="@+id/allSalons" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuidLineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuidLineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>